--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body bgcolor="black">
-
-<h1 style="font-family:papyrus" align="center"><font color="green">Welcome to mylore.net</h1>
-
-<p style="font-family:papyrus" align="center" font size="18"><font color="green"><b>This is a personal webpage written in HTML, aiming to replicate those of the early 2000s. My name is Aaron and I am an aspiring Information Security Professional, please click the link(s) below to view my projects on github<br>(if you would like access, please contact me via LinkedIn)</b></p>
-
+<h1 style="font-family:papyrus" align="center"><font color="yellow">Welcome to mylore.biz</h1>
+<p style="font-family:papyrus" align="center" font size="18"><font color="yellow"><b>This is a personal webpage written in HTML, aiming to replicate those of the early 2000s. My name is Aaron and I am an aspiring Information Security Professional, please click the link(s) below to view my projects on github<br>(if you would like access, please contact me via LinkedIn)</b></p>
 <p style="font-family:papyrus"> Me: </p>
 <img src="me.htm" alt="me" width="200" height="200">
 <br>
@@ -15,5 +12,21 @@
 <br>
 <h3 style="font-family:papyrus" align="center">Contact</h3>
 <a href="https://www.linkedin.com/in/asl-li/" style="font-family:papyrus">LinkedIn</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p style="font-family:papyrus"> Some music I made for <i>ambience</i> : </p>
+<audio id="bgmus" src="bg_music_by_me.m4a"></audio>
+<button onclick="play()" type="button">Play Audio</button>
+<button onclick="pause()" type="button">Pause Audio</button>
+<script>
+var wpm = document.getElementById("bgmus");
+function play() {
+wpm.play();}
+function pause() {
+wpm.pause();}
+</script>
 </body>
-</html>
+</html> 
