--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body bgcolor="black">
-<h1 style="font-family:papyrus" align="center"><font color="yellow">Welcome to mylore.biz</h1>
+<h1 style="font-family:papyrus" align="center"><font color="yellow">Welcome to mylore.net</h1>
 <p style="font-family:papyrus" align="center" font size="18"><font color="yellow"><b>This is a personal webpage written in HTML and some light JavaScript, aiming to replicate those of the early 2000s. My name is Aaron and I am an aspiring Information Security Professional, please click the link(s) below to view my projects on github<br>(if you would like access, please contact me via LinkedIn)</b></p>
 <p style="font-family:papyrus"> Me: </p>
 <img src="me.htm" alt="me" width="200" height="200">
