--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ function vpause() {
 vid.pause();}
 </script>
 <nav>
-<a href="./blog.htm">Blog</a>
+<a href="./blog">Blog</a>
 </nav>
 </body>
 </html> 
