--- a/blog.htm
+++ b/blog.htm
@@ -5,6 +5,6 @@
 <h1 style="font-family:papyrus" align="center"><font color="yellow">In the hall of malevolance</h1>
 <p style="font-family:papyrus" align="center" font size="18"><font color="yellow"><b>I shall confess any devious tricks or forays into mischeviousness here...</b></p>
 <nav>
-<a href="./index">Home</a>
+<a style="font-family:papyrus" align="center" href="./index">Home</a>
 </body>
 </html> 
