--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <br>
 <a href="https://github.com/aaronsoulim/x86encryption" style="font-family:papyrus">x86 encryption</a>
 <br>
+<a href="https://github.com/aaronsoulim/VulnerabilityExploits" style="font-family:papyrus">Vulnerability Exploits</a>
 <h3 style="font-family:papyrus" align="center">Contact</h3>
 <a href="https://www.linkedin.com/in/asl-li/" style="font-family:papyrus">LinkedIn</a>
 <br>
