--- a/hmd.html
+++ b/hmd.html
@@ -26,7 +26,7 @@
 <br>
 <br>
 <br>
-<p align = "right" id="but" onclick="myFound()">.</p>
+<p font size = "5" align = "right" id="but" onclick="myFound()">.</p>
 <script>
 function myFound() {
 var txt;
