--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ vid.play();}
 function vpause() {
 vid.pause();}
 </script>
-<a font size = "10" align = "right" href = "./hmd">?</a> 
 <nav>
+<a style="font-family:papyrus" href="./hmd">?</a>
 <a style="font-family:papyrus" href="./blog">Blog</a>
 </nav>
 </body>
