--- a/mother.html
+++ b/mother.html
@@ -10,7 +10,7 @@
 <center>
 <p onclick="myMsg()" id="Msg">One Last Click...</p>
 <br><br><br><br>
-<p style="font-family:papyrus">Ambience</p>
+<p style="font-family:papyrus">Ambience<br>(click the square)</p>
 <iframe width="10" height="10" 
 src="https://www.youtube.com/embed/MWT3bsPzONk?controls=0autoplay=1" 
 frameborder="0" autoplay"></iframe>
