--- a/blackjack.html
+++ b/blackjack.html
@@ -7,6 +7,7 @@
 <center>
 <iframe id="vid" width="840" height="473" src="https://www.youtube.com/embed/hsZI4UY4Gig?controls=0" frameborder="0" allowfullscreen> </iframe>
 <br>
+<img src="nice.PNG" width="200" height="200">
 <p style="font-family:papyrus">Links to Resources:</p>
 <a href="https://www.felixcloutier.com/x86/index.html" style="font-family:papyrus">Reference Manual</a>
 <a href="https://www.eso.org/~ndelmott/ascii.html" style="font-family:papyrus">Ascii Chart</a>
