--- a/blackjack.html
+++ b/blackjack.html
@@ -6,8 +6,12 @@
 <br>
 <center>
 <iframe id="vid" width="840" height="473" src="https://www.youtube.com/embed/hsZI4UY4Gig?controls=0" frameborder="0" allowfullscreen> </iframe>
-<br>
+<br><br>
 <img src="nice.PNG" width="200" height="200">
+<br><br>
+<p style="font-family:papyrus">Addendum:<br>Soft 17 means dealer stands on A[6] - where 6 is the final value of the dealer's other 4 cards.<br>
+This means the dealer doesn't get the chance to increase their hand to 21, reducing house edge by ~0.2%.<br>I have not played my game enough to notice what
+I actually implemented, and tbh, I've forgotten my intended implemenation<br>(probably Hard 17 but idk lol)</p>
 <p style="font-family:papyrus">Links to Resources:</p>
 <a href="https://www.felixcloutier.com/x86/index.html" style="font-family:papyrus">Reference Manual</a>
 <a href="https://www.eso.org/~ndelmott/ascii.html" style="font-family:papyrus">Ascii Chart</a>
