--- a/blackjack.html
+++ b/blackjack.html
@@ -4,17 +4,18 @@
 <body link="white" alink="green" vlink="white"> 
 <h1 id="tit" style="font-family:papyrus" align="center"><font color="pink">x86 BlackJack</h1>
 <br><center>
-<h2>I have added betting!<br>As I didn't want to brute force my way through this task, implementation took about 4 hours 
+  <h2>I have added betting!<br></h2>
+<p font colour="green">As I didn't want to brute force my way through this task, implementation took about 4 hours 
 this time, most trouble was figuring out an efficient way of presenting
 the players money (and trying to navigate my code, hehe...)<br>
 Money is stored in a save file: If you have no money, the house provides; If you have
 no money after a hand, you get kicked out!<br>Pressing [m] allows you to see how much money you have (had to perform a
-Decimal to ASCII conversion, which you can see shows 100s, 10s and 1s<br>You can double down!<br>Blackjack provides 3/2
+Decimal to ASCII conversion, which you can see shows 100s, 10s and 1s)<br>You can double down!<br>Blackjack provides 3/2
 times your bet (or rounded approximation)<br>The test images below will show you what's up:<br>(I also spent a bit of time
-making the final product look prettier)<br></h2>
-<img src="betnhtr.png" width="600" height="600">
-<img src="bjbet.png" width="600" height="600">
-<img src="double_down.png" width="600" height="600">
+making the final product looks prettier)<br></p>
+<img src="betnhtr.png" width="400" height="400">
+<img src="bjbet.png" width="400" height="400">
+<img src="double_down.png" width="400" height="400">
 <iframe id="vid" width="840" height="473" src="https://www.youtube.com/embed/hsZI4UY4Gig?controls=0" frameborder="0" allowfullscreen> </iframe>
 <br><br>
 <p style="font-family:papyrus">Addendum:<br>Soft 17 means dealer stands on A[6] - where 6 is the final value of the dealer's other 4 cards.<br>
