--- a/blackjack.html
+++ b/blackjack.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html>
-<body background="casino.htm" style="font-family:papyrus" font color="pink">
+<body background="casino.htm" style="font-family:papyrus">
 <body link="white" alink="green" vlink="white"> 
 <h1 id="tit" style="font-family:papyrus" align="center"><font color="pink">x86 BlackJack</h1>
 <br><center>
@@ -13,17 +13,17 @@ no money after a hand, you get kicked out!<br>Pressing [m] allows you to see how
 Decimal to ASCII conversion, which you can see shows 100s, 10s and 1s)<br>You can double down!<br>Blackjack provides 3/2
 times your bet (or rounded approximation)<br>The test images below will show you what's up:<br>(I also spent a bit of time
 making the final product looks prettier)<br></p>
-<img src="betnhtr.png" width="400" height="400">
-<img src="bjbet.png" width="400" height="400">
-<img src="double_down.png" width="400" height="400">
+<img src="betnhtr.png" width="500" height="500">
+<img src="bjbet.png" width="500" height="500">
+<img src="double_down.png" width="500" height="500">
 <iframe id="vid" width="840" height="473" src="https://www.youtube.com/embed/hsZI4UY4Gig?controls=0" frameborder="0" allowfullscreen> </iframe>
 <br><br>
-<p style="font-family:papyrus">Addendum:<br>Soft 17 means dealer stands on A[6] - where 6 is the final value of the dealer's other 4 cards.<br>
+<p style="font-family:papyrus" font color="pink">Addendum:<br>Soft 17 means dealer stands on A[6] - where 6 is the final value of the dealer's other 4 cards.<br>
 This means the dealer doesn't get the chance to increase their hand to 21, reducing house edge by ~0.2%.<br>I have not played my game enough to notice what
 I actually implemented, and tbh, I've forgotten my intended implemenation<br>(probably Hard 17 but idk lol)</p>
 <p style="font-family:papyrus">Addendum 2:<br>It's stand on Soft 17...<br>~0.2%, nice</p><br>
 <img src="S17.png" width="200" height="200"><br>
-<p style="font-family:papyrus">Links to Resources:</p>
+<p style="font-family:papyrus" font color="pink">Links to Resources:</p>
 <a href="https://www.felixcloutier.com/x86/index.html" style="font-family:papyrus">Reference Manual</a>
 <a href="https://www.eso.org/~ndelmott/ascii.html" style="font-family:papyrus">Ascii Chart</a>
 </center>
