--- a/blackjack.html
+++ b/blackjack.html
@@ -2,9 +2,9 @@
 <html>
 <body background="casino.htm" style="font-family:papyrus">
 <body link="white" alink="green" vlink="white"> 
-<h1 id="tit" style="font-family:papyrus" align="center"><font color="pink">x86 BlackJack</h1>
+<h1 id="tit" style="font-family:papyrus" align="center"><font color="pink">x86 BlackJack</h1></font>
 <br><center>
-  <h2>I have added betting!<br></h2>
+<h2>I have added betting!<br></h2>
 <p font color="green">As I didn't want to brute force my way through this task, implementation took about 4 hours 
 this time, most trouble was figuring out an efficient way of presenting
 the players money (and trying to navigate my code, hehe...)<br>
@@ -12,7 +12,7 @@ Money is stored in a save file: If you have no money, the house provides; If you
 no money after a hand, you get kicked out!<br>Pressing [m] allows you to see how much money you have (had to perform a
 Decimal to ASCII conversion, which you can see shows 100s, 10s and 1s)<br>You can double down!<br>Blackjack provides 3/2
 times your bet (or rounded approximation)<br>The test images below will show you what's up:<br>(I also spent a bit of time
-making the final product looks prettier)<br></p>
+making the final product looks prettier)<br></p></font>
 <img src="betnhtr.png" width="500" height="500">
 <img src="bjbet.png" width="500" height="500">
 <img src="double_down.png" width="500" height="500">
@@ -23,11 +23,11 @@ This means the dealer doesn't get the chance to increase their hand to 21, reduc
 I actually implemented, and tbh, I've forgotten my intended implemenation<br>(probably Hard 17 but idk lol)</p>
 <p style="font-family:papyrus">Addendum 2:<br>It's stand on Soft 17...<br>~0.2%, nice</p><br>
 <img src="S17.png" width="200" height="200"><br>
-<p style="font-family:papyrus" font color="pink">Links to Resources:</p>
+<p style="font-family:papyrus">Links to Resources:</p>
 <a href="https://www.felixcloutier.com/x86/index.html" style="font-family:papyrus">Reference Manual</a>
 <a href="https://www.eso.org/~ndelmott/ascii.html" style="font-family:papyrus">Ascii Chart</a>
 </center>
-</center>
+</font>
 <br><br><br>
 <a href="./index" style="font-family:papyrus">Home</a>
 </body>
