--- a/blackjack.html
+++ b/blackjack.html
@@ -5,7 +5,7 @@
 <h1 id="tit" style="font-family:papyrus" align="center"><font color="pink">x86 BlackJack</h1>
 <br><center>
 <h2>I have added betting!<br></h2></font>
-<p font color="HotPink">As I didn't want to brute force my way through this task, implementation took about 4 hours 
+<p font color="fuchsia">As I didn't want to brute force my way through this task, implementation took about 4 hours 
 this time, most trouble was figuring out an efficient way of presenting
 the players money (and trying to navigate my code, hehe...)<br>
 Money is stored in a save file: If you have no money, the house provides; If you have
