--- a/blackjack.html
+++ b/blackjack.html
@@ -2,10 +2,10 @@
 <html>
 <body background="casino.htm" style="font-family:papyrus">
 <body link="white" alink="green" vlink="white"> 
-<h1 id="tit" style="font-family:papyrus" align="center"><font color="pink">x86 BlackJack</h1>
+<h1 id="tit" style="font-family:papyrus" align="center"><style="color:pink">x86 BlackJack</h1>
 <br><center>
-<h2>I have added betting!<br></h2></font>
-<p font color="fuchsia">As I didn't want to brute force my way through this task, implementation took about 4 hours 
+<h2>I have added betting!<br></h2></style>
+<p style="color:fuchsia">As I didn't want to brute force my way through this task, implementation took about 4 hours 
 this time, most trouble was figuring out an efficient way of presenting
 the players money (and trying to navigate my code, hehe...)<br>
 Money is stored in a save file: If you have no money, the house provides; If you have
@@ -27,7 +27,7 @@ I actually implemented, and tbh, I've forgotten my intended implemenation<br>(pr
 <a href="https://www.felixcloutier.com/x86/index.html" style="font-family:papyrus">Reference Manual</a>
 <a href="https://www.eso.org/~ndelmott/ascii.html" style="font-family:papyrus">Ascii Chart</a>
 </center>
-</font>
+</style>
 <br><br><br>
 <a href="./index" style="font-family:papyrus">Home</a>
 </body>
