--- a/blackjack.html
+++ b/blackjack.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html>
-<body background="casino.htm" style="font-family:papyrus">
+<body background="casino2.htm" style="font-family:papyrus">
 <body link="white" alink="green" vlink="white"> 
 <h1 id="tit" style="font-family:papyrus" align="center" style="color:pink">x86 BlackJack</h1></style>
 <br><center>
@@ -20,14 +20,13 @@ making the final product looks prettier)<br></b></p></style>
 <br><br>
 <p style="font-family:papyrus" style="color:fuchsia">Addendum:<br>Soft 17 means dealer stands on A[6] - where 6 is the final value of the dealer's other 4 cards.<br>
 This means the dealer doesn't get the chance to increase their hand to 21, reducing house edge by ~0.2%.<br>I have not played my game enough to notice what
-I actually implemented, and tbh, I've forgotten my intended implemenation<br>(probably Hard 17 but idk lol)</p>
-<p style="font-family:papyrus">Addendum 2:<br>It's stand on Soft 17...<br>~0.2%, nice</p><br>
+I actually implemented, and tbh, I've forgotten my intended implemenation<br>(probably Hard 17 but idk lol)</p></style>
+<p style="font-family:papyrus">Addendum 2:<br>It's stand on Soft 17...<br>~0.2%, nice</p><br></style>
 <img src="S17.png" width="200" height="200"><br>
-<p style="font-family:papyrus">Links to Resources:</p>
+<p style="font-family:papyrus" style="color:pink">Links to Resources:</p></style>
 <a href="https://www.felixcloutier.com/x86/index.html" style="font-family:papyrus">Reference Manual</a>
 <a href="https://www.eso.org/~ndelmott/ascii.html" style="font-family:papyrus">Ascii Chart</a>
 </center>
-</style>
 <br><br><br>
 <a href="./index" style="font-family:papyrus">Home</a>
 </body>
