--- a/blackjack.html
+++ b/blackjack.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html> 
 <html>
-<body background="casino2.htm" style="font-family:papyrus">
+<body background="casino2.htm" style="font-family:papyrus" font color="pink">
 <body link="white" alink="green" vlink="white"> 
-<h1 id="tit" style="font-family:papyrus" align="center" style="color:pink">x86 BlackJack</h1></style>
+<h1 id="tit" style="font-family:papyrus" align="center">x86 BlackJack</h1>
 <br><center>
-<h2 style="color:pink">I have added betting!<br></h2></style>
-<p style="color:fuchsia"><b>As I didn't want to brute force my way through this task, implementation took about 4 hours 
+<h2>I have added betting!<br></h2>
+<p>As I didn't want to brute force my way through this task, implementation took about 4 hours 
 this time, most trouble was figuring out an efficient way of presenting
 the players money (and trying to navigate my code, hehe...)<br>
 Money is stored in a save file: If you have no money, the house provides; If you have
 no money after a hand, you get kicked out!<br>Pressing [m] allows you to see how much money you have (had to perform a
 Decimal to ASCII conversion, which you can see shows 100s, 10s and 1s)<br>You can double down!<br>Blackjack provides 3/2
 times your bet (or rounded approximation)<br>The test images below will show you what's up:<br>(I also spent a bit of time
-making the final product looks prettier)<br></b></p></style>
+making the final product looks prettier)<br></p>
 <img src="betnhtr.png" width="500" height="500">
 <img src="bjbet.png" width="500" height="500">
 <img src="double_down.png" width="500" height="500">
 <iframe id="vid" width="840" height="473" src="https://www.youtube.com/embed/hsZI4UY4Gig?controls=0" frameborder="0" allowfullscreen> </iframe>
 <br><br>
-<p style="font-family:papyrus" style="color:fuchsia">Addendum:<br>Soft 17 means dealer stands on A[6] - where 6 is the final value of the dealer's other 4 cards.<br>
+<p style="font-family:papyrus">Addendum:<br>Soft 17 means dealer stands on A[6] - where 6 is the final value of the dealer's other 4 cards.<br>
 This means the dealer doesn't get the chance to increase their hand to 21, reducing house edge by ~0.2%.<br>I have not played my game enough to notice what
 I actually implemented, and tbh, I've forgotten my intended implemenation<br>(probably Hard 17 but idk lol)</p></style>
-<p style="font-family:papyrus">Addendum 2:<br>It's stand on Soft 17...<br>~0.2%, nice</p><br></style>
+<p style="font-family:papyrus">Addendum 2:<br>It's stand on Soft 17...<br>~0.2%, nice</p><br>
 <img src="S17.png" width="200" height="200"><br>
-<p style="font-family:papyrus" style="color:pink">Links to Resources:</p></style>
+<p style="font-family:papyrus" style="color:pink">Links to Resources:</p>
 <a href="https://www.felixcloutier.com/x86/index.html" style="font-family:papyrus">Reference Manual</a>
 <a href="https://www.eso.org/~ndelmott/ascii.html" style="font-family:papyrus">Ascii Chart</a>
 </center>
