--- a/blackjack.html
+++ b/blackjack.html
@@ -2,7 +2,7 @@
 <html>
 <body background="casino2.htm" style="font-family:papyrus" font color="pink">
 <body link="white" alink="green" vlink="white"> 
-<h1 id="tit" style="font-family:papyrus" align="center">x86 BlackJack</h1>
+<h1 id="tit" style="font-family:papyrus" align="center"><font color="pink">x86 BlackJack</h1>
 <br><center>
 <h2>I have added betting!<br></h2>
 <p>As I didn't want to brute force my way through this task, implementation took about 4 hours 
