--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <br>
 <a href="https://github.com/aaronsoulim/VulnerabilityExploits" style="font-family:papyrus">Vulnerability Exploits</a>
 <br>
-<a href="./blackjack" style="font-family:papyrus">x86 Blackjack</a>
+<a href="./blackjack" style="font-family:papyrus">x86 Blackjack</a><br>
+<a href="./machlearn" style="font-family:papyrus">x86 Machine Learning</a><br>
 <h3 style="font-family:papyrus" align="center">Contact</h3>
 <a href="https://www.linkedin.com/in/asl-li/" style="font-family:papyrus">LinkedIn</a>
 <br>
