--- a/machlearn.html
+++ b/machlearn.html
@@ -5,7 +5,8 @@
 <h1 id="tit" style="font-family:papyrus" align="center"><font color="white">x86 Machine Learning</h1>
 <br>
 <center>
-<iframe id="vid" width="840" height="473" src="https://www.youtube.com/embed/hsZI4UY4Gig?controls=0" frameborder="0" allowfullscreen> </iframe>
+  
+<iframe id="vid" width="840" height="473" src="https://www.youtube.com/embed/GgDksYP3E70?controls=0" frameborder="0" allowfullscreen> </iframe>
 <p style="font-family:papyrus">Links to Resources:</p>
 <a href="https://www.youtube.com/watch?v=R9OHn5ZF4Uo" style="font-family:papyrus">CGP Grey Video</a>
 </center>
