--- a/index.html
+++ b/index.html
@@ -6,17 +6,9 @@
 <p style="font-family:papyrus" align="center" font size="18"><font color="yellow"><b>This is a personal webpage written in HTML and some light JavaScript, aiming to replicate those of the early 2000s. My name is Aaron and I am an aspiring Information Security Professional, please click the link(s) below to view my projects on github<br>(if you would like access, please contact me via LinkedIn)</b></p>
 <p style="font-family:papyrus"> Me: </p>
 <img align="left" src="box.htm" alt="me" width="200" height="200">
-<img align="right" src="dunk.gif" alt="dunk" width="200" height="200">
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<img align="right" src="dunk.gif" alt="dunk" width="200" height="200"><br><br><br><br><br><br><br><br>
 <h2 style="font-family:papyrus" align="center">Projects</h2>
-<br>
+<br><center>
 <a href="https://github.com/aaronsoulim/x86encryption" style="font-family:papyrus">x86 encryption</a>
 <br>
 <a href="https://github.com/aaronsoulim/VulnerabilityExploits" style="font-family:papyrus">Vulnerability Exploits</a>
@@ -28,7 +20,7 @@
 <br>
 <br>
 <br>
-<p style="font-family:papyrus"> Some music I made, for <i>ambience</i> : </p>
+<p style="font-family:papyrus"> Some music I made, for <i>ambience</i> : </p></center>
 <audio id="bgmus" src="bg_music_by_me.m4a"></audio>
 <center>
 <button onclick="play()" type="button">Play Audio</button>
@@ -42,8 +34,8 @@ function pause() {
 wpm.pause();}
 </script>
 <br>
-<p style="font-family:papyrus"> Video of me shredding: </p>
-<center>
+<center><p style="font-family:papyrus"> Video of me shredding: </p>
+</center><center>
 <video id="shred" width="200" height="200" src="shred.mp4"></video></center>
 <br>
 <center>
