--- a/machlearn.html
+++ b/machlearn.html
@@ -3,9 +3,8 @@
 <body bgcolor="black" style="font-family:papyrus" font color="white">
 <body link="white" alink="green" vlink="white"> 
 <h1 id="tit" style="font-family:papyrus" align="center"><font color="white">x86 Machine Learning</h1>
-<br>
+<br><p>Machine learning through trust...</p><br>
 <center>
-  
 <iframe id="vid" width="840" height="473" src="https://www.youtube.com/embed/GgDksYP3E70?controls=0" frameborder="0" allowfullscreen> </iframe>
 <p style="font-family:papyrus">Links to Resources:</p>
 <a href="https://www.youtube.com/watch?v=R9OHn5ZF4Uo" style="font-family:papyrus">CGP Grey Video</a>
