--- a/machlearn.html
+++ b/machlearn.html
@@ -5,6 +5,8 @@
 <h1 id="tit" style="font-family:papyrus" align="center"><font color="white">x86 Machine Learning</h1>
 <br><center><p>Learning through trust, classification and iteration...</p><br>
 <iframe id="vid" width="840" height="473" src="https://www.youtube.com/embed/GgDksYP3E70?controls=0" frameborder="0" allowfullscreen> </iframe>
+<br><p>Addendum:<br>I believe, even and odd sorting will always be a form classification, and therefore: Will always <b>effectively</b> require supervised learning
+  <br>In order to showcase Unsupervised learning, a more complex subject would be required</p>
 <p style="font-family:papyrus">Links to Resources:</p>
 <a href="https://www.youtube.com/watch?v=R9OHn5ZF4Uo" style="font-family:papyrus">CGP Grey Video</a>
 </center>
