--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <body background="bg.htm">
 <body link="white" alink="green" vlink="white"> 
 <h1 style="font-family:papyrus" align="center"><font color="yellow">Welcome to mylore.net</h1>
-<p style="font-family:papyrus" align="center" font size="18"><font color="yellow"><b>This is a personal webpage written in HTML and some light JavaScript, aiming to replicate those of the early 2000s. My name is Aaron and I am an aspiring Information Security Professional, please click the link(s) below to view my projects on github<br>(if you would like access, please contact me via LinkedIn)</b></p>
+<p style="font-family:papyrus" align="center" font size="18"><font color="yellow"><b>This is a personal webpage written in HTML and some light JavaScript, 
+aiming to replicate those of the early 2000s. My name is Aaron and I am an aspiring Information Security Professional, 
+please click the link(s) below to view my projects</b></p>
 <p style="font-family:papyrus"> Me: </p>
 <img align="left" src="box.htm" alt="me" width="200" height="200">
 <img align="right" src="dunk.gif" alt="dunk" width="200" height="200"><br><br><br><br><br><br><br><br>
 <h2 style="font-family:papyrus" align="center">Projects</h2>
 <br><center>
-<a href="https://github.com/aaronsoulim/x86encryption" style="font-family:papyrus">x86 encryption</a>
+<a href="https://github.com/aaronsoulim/x86encryption" style="font-family:papyrus">x86 Encryption (message for access request)</a>
 <br>
 <a href="https://github.com/aaronsoulim/VulnerabilityExploits" style="font-family:papyrus">Vulnerability Exploits</a>
 <br>
