--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ vid.pause();}
 function onClick() {
 var masage;
 if (confirm("You found a secret!")){
-txt="Mother's Day Challenge";
+masage="Mother's Day Challenge";
 } else {
-txt = "why would you press cancel -_-";}
+masage = "why would you press cancel -_-";}
 document.getElementById("fmlnk").innerHTML = masage;
 }
 </script>
