--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <body background="bg.htm">
 <body link="white" alink="green" vlink="white"> 
 <h1 style="font-family:papyrus" align="center"><font color="yellow">Welcome to mylore.net</h1>
-<p style="font-family:papyrus" align="center" font size="18"><font color="yellow"><b>This is a personal webpage written in HTML and some light JavaScript, 
+<p style="font-family:papyrus" align="center" font size="18"><font color="yellow">This is a personal webpage written in HTML and some light JavaScript, 
 aiming to replicate those of the early 2000s. My name is Aaron and I am an aspiring Information Security Professional, 
-please click the link(s) below to view my projects</b></p>
+please click the link(s) below to view my projects</p>
 <p style="font-family:papyrus"> Me: </p>
 <img align="left" src="box.htm" alt="me" width="200" height="200">
-<img align="right" src="dunk.gif" alt="dunk" width="200" height="200"><br><br><br><br><br><br><br><br>
+<img align="right" src="dunk.gif" alt="dunk" width="200" height="200"><br>
 <h2 style="font-family:papyrus" align="center">Projects</h2>
 <br><center>
 <a href="https://github.com/aaronsoulim/x86encryption" style="font-family:papyrus">x86 Encryption (message for access request)</a>
@@ -19,8 +19,6 @@ please click the link(s) below to view my projects</b></p>
 <a href="./machlearn" style="font-family:papyrus">x86 Machine Learning</a><br>
 <h3 style="font-family:papyrus" align="center">Contact</h3>
 <a href="https://www.linkedin.com/in/asl-li/" style="font-family:papyrus">LinkedIn</a>
-<br>
-<br>
 <br>
 <p style="font-family:papyrus"> Some music I made, for <i>ambience</i> : </p></center>
 <audio id="bgmus" src="bg_music_by_me.m4a"></audio>
