--- a/blackjack.html
+++ b/blackjack.html
@@ -7,12 +7,12 @@
 <h2>I have added betting!<br></h2>
 <p>As I didn't want to brute force my way through this task, implementation took about 4 hours 
 this time, most trouble was figuring out an efficient way of presenting
-the players money (and trying to navigate my code, hehe...)<br>
+the player's money (and trying to navigate my code, hehe...)<br>
 Money is stored in a save file: If you have no money, the house provides; If you have
 no money after a hand, you get kicked out!<br>Pressing [m] allows you to see how much money you have (had to perform a
 Decimal to ASCII conversion, which you can see shows 100s, 10s and 1s)<br>You can double down!<br>Blackjack provides 3/2
 times your bet (or rounded approximation)<br>The test images below will show you what's up:<br>(I also spent a bit of time
-making the final product looks prettier)<br></p>
+making the final product look prettier)<br></p>
 <img src="betnhtr.png" width="500" height="500">
 <img src="bjbet.png" width="500" height="500">
 <img src="double_down.png" width="500" height="500">
