--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ please click the link(s) below to view my projects</p>
 <img align="left" src="box.htm" alt="me" width="200" height="200">
 <img align="right" src="dunk.gif" alt="dunk" width="200" height="200"><br>
 <h2 style="font-family:papyrus" align="center">Projects</h2>
-<br><center>
+<center>
 <a href="https://github.com/aaronsoulim/x86encryption" style="font-family:papyrus">x86 Encryption (message for access request)</a>
 <br>
 <a href="https://github.com/aaronsoulim/VulnerabilityExploits" style="font-family:papyrus">Vulnerability Exploits</a>
