--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html> 
 <html>
+<html>
+<head>
+  <title>The Swagman Cometh</title>
+</head>
 <body background="bg.htm">
 <body link="white" alink="green" vlink="white"> 
 <h1 style="font-family:papyrus" align="center"><font color="yellow">Welcome to mylore.net</h1>
