--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ masage = "why would you press cancel -_-";}
 document.getElementById("fmlnk").innerHTML = masage;
 }
 </script>
-<p style="font-family:papyrus"> Download:<br>NOTE: By downloading and running the programme, I am in no way responsible for outcomes that may occur,
-  other than those that are specifically directed to by the source code</p>
+<p style="font-family:papyrus"> Download:<br>NOTE: By downloading and running the program, please understand that I am in no way responsible for outcomes that may occur,
+  other than those that are specifically directed to by the source code ~ i.e. The programme intends no harm, just a little joke...</p>
 <a style="font-family:papyrus" href="./pressCANCEL.exe" download><i>this</i></a>
 </center>
 </body>
