--- a/index.html
+++ b/index.html
@@ -67,9 +67,12 @@ masage = "why would you press cancel -_-";}
 document.getElementById("fmlnk").innerHTML = masage;
 }
 </script>
-<p style="font-family:papyrus"> Download:<br>NOTE: By downloading and running the program, please understand that I am in no way responsible for outcomes that may occur,
-  other than those that are specifically directed to by the source code ~ i.e. The programme intends no harm, just a little joke...</p>
+<p style="font-family:papyrus"> Download:</p>
 <a style="font-family:papyrus" href="./pressCANCEL.exe" download><i>this</i></a>
+<p style="font-family:papyrus"> NOTE: By downloading and running the program, please understand that I am in no way 
+responsible for outcomes that may occur, other than those that are specifically directed to by the source code ~ i.e. 
+The programme intends no harm, just a little joke...</p>
+<a style="font-family:papyrus" href="https://github.com/aaronsoulim/funnylilthings/blob/main/lets.c"><i>SRC</i></a>
 </center>
 </body>
 </html> 
