--- a/index.html
+++ b/index.html
@@ -67,6 +67,35 @@ masage = "why would you press cancel -_-";}
 document.getElementById("fmlnk").innerHTML = masage;
 }
 </script>
+
+<center>
+<video id="ding" width="200" height="200" src="ding.mp4"></video></center>
+<br>
+<center>
+<button onclick="vplay2()" type="button">Merk</button>
+<button onclick="vpause2()" type="button">Pause said Merking</button>
+</center>
+<script>
+var vid2 = document.getElementById("ding");
+vid2.volume=0.3
+function vplay2() {
+vid2.play();}
+function vpause2() {
+vid2.pause();}
+</script>
+<center>
+<p onclick="onClick()" id="fm">.</p>
+<a style="font-family:papyrus" href="./hmd" id="fmlnk"></a>
+<script>
+function onClick() {
+var masage;
+if (confirm("You found a secret!")){
+masage="Mother's Day Challenge";
+} else {
+masage = "why would you press cancel -_-";}
+document.getElementById("fmlnk").innerHTML = masage;
+}
+</script>
 <p style="font-family:papyrus"> Download:</p>
 <a style="font-family:papyrus" href="./pressCANCEL.exe" download><i>this</i></a>
 <p style="font-family:papyrus"> NOTE: By downloading and running the program, please understand that I am in no way 
