--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ document.getElementById("fmlnk").innerHTML = masage;
 </script>
 
 <center>
-<video id="ding" width="200" height="200" src="ding.mp4"></video></center>
+<video id="ding" width="200" height="200" src="bB.mov"></video></center>
 <br>
 <center>
 <button onclick="vplay2()" type="button">Merk</button>
