--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@ function vpause2() {
 vid2.pause();}
 </script>
 <p style="font-family:papyrus"> Download:</p>
-<a style="font-family:papyrus" href="./pressCANCEL.exe" download><i>this</i></a>
+<a style="font-family:papyrus"><i>this (down, temporarily)</i></a>
 <p style="font-family:papyrus"> NOTE: By downloading and running the program, please understand that I am in no way 
 responsible for outcomes that may occur, other than those that are specifically directed to by the source code ~ i.e. 
 The programme intends no harm, just a little joke...</p>
-<a style="font-family:papyrus" href="https://github.com/aaronsoulim/funnylilthings/blob/main/lets.c"><i>SRC</i></a>
+<a style="font-family:papyrus" href="https://github.com/aaronsoulim/funnylilthings/blob/main/lets.c"><i>SRC (down, temporarily)</i></a>
 </center>
 </body>
 </html> 
