--- a/index.html
+++ b/index.html
@@ -6,25 +6,26 @@
 </head>
 <body background="bg.htm">
 <body link="white" alink="green" vlink="white"> 
-<h1 style="font-family:papyrus" align="center"><font color="yellow">Welcome to mylore.net</h1>
-<p style="font-family:papyrus" align="center" font size="18"><font color="yellow">This is a personal webpage written in HTML and some light JavaScript, 
-aiming to replicate those of the early 2000s. My name is Aaron and I am an aspiring Information Security Professional, 
+<h1 style="font-family:'gothic'" align="center"><font color="yellow">Welcome to mylore.net</h1>
+<p align="center" font size="18"><font color="yellow">This is a personal webpage written in HTML and some light JavaScript, 
+aiming to replicate those of the early 2000s. My name is Aaron - I am currently an IT Technician with ambitions of moving into the CyberSecurity Field. 
 please click the link(s) below to view my projects</p>
-<p style="font-family:papyrus"> Me: </p>
-<img align="left" src="box.htm" alt="me" width="200" height="200">
+<p"> Me: </p>
 <img align="right" src="dunk.gif" alt="dunk" width="200" height="200"><br>
-<h2 style="font-family:papyrus" align="center">Projects</h2>
+<h2 align="center">Projects</h2>
 <center>
 <a href="https://github.com/aaronsoulim/x86encryption" style="font-family:papyrus">x86 Encryption (message for access request)</a>
 <br>
 <a href="https://github.com/aaronsoulim/VulnerabilityExploits" style="font-family:papyrus">Vulnerability Exploits</a>
 <br>
-<a href="./blackjack" style="font-family:papyrus">x86 Blackjack</a><br>
-<a href="./machlearn" style="font-family:papyrus">x86 Machine Learning</a><br>
-<h3 style="font-family:papyrus" align="center">Contact</h3>
-<a href="https://www.linkedin.com/in/asl-li/" style="font-family:papyrus">LinkedIn</a>
+<a href="./blackjack">x86 Blackjack</a><br>
+<a href="./machlearn">x86 Machine Learning</a><br>
+<a>PING FLOODER</a>
+<a href="./forum">FORUM</a><br>
+<h3 align="center">Contact</h3>
+<a href="https://www.linkedin.com/in/asl-li/">LinkedIn</a>
 <br>
-<p style="font-family:papyrus"> Some music I made, for <i>ambience</i> : </p></center>
+<p> Some music I made, for <i>ambience</i> : </p></center>
 <audio id="bgmus" src="bg_music_by_me.m4a"></audio>
 <center>
 <button onclick="play()" type="button">Play Audio</button>
@@ -38,7 +39,7 @@ function pause() {
 wpm.pause();}
 </script>
 <br>
-<center><p style="font-family:papyrus"> Video of me shredding: </p>
+<center><p> Video of me shredding: </p>
 </center><center>
 <video id="shred" width="200" height="200" src="shred.mp4"></video></center>
 <br>
@@ -56,7 +57,7 @@ vid.pause();}
 </script>
 <center>
 <p onclick="onClick()" id="fm">.</p>
-<a style="font-family:papyrus" href="./hmd" id="fmlnk"></a>
+<a" href="./hmd" id="fmlnk"></a>
 <script>
 function onClick() {
 var masage;
@@ -82,12 +83,12 @@ vid2.play();}
 function vpause2() {
 vid2.pause();}
 </script>
-<p style="font-family:papyrus"> Download:</p>
-<a style="font-family:papyrus"><i>this (down, temporarily)</i></a>
-<p style="font-family:papyrus"> NOTE: By downloading and running the program, please understand that I am in no way 
+<p> Download:</p>
+<a><i>this (down, temporarily)</i></a>
+<p> NOTE: By downloading and running the program, please understand that I am in no way 
 responsible for outcomes that may occur, other than those that are specifically directed to by the source code ~ i.e. 
 The programme intends no harm, just a little joke...</p>
-<a style="font-family:papyrus" href="https://github.com/aaronsoulim/funnylilthings/blob/main/lets.c"><i>SRC (down, temporarily)</i></a>
+<a href="https://github.com/aaronsoulim/funnylilthings/blob/main/lets.c"><i>SRC (down, temporarily)</i></a>
 </center>
 </body>
 </html> 
