--- a/blackjack.html
+++ b/blackjack.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> 
 <html>
-<body background="casino2.htm" style="font-family:papyrus" font color="pink">
+<body background="casino2.htm" font color="pink">
 <body link="white" alink="green" vlink="white"> 
-<h1 id="tit" style="font-family:papyrus" align="center"><font color="pink">x86 BlackJack</h1>
+<h1 id="tit" style="font-family:gothic" align="center"><font color="pink">x86 BlackJack</h1>
 <br><center>
 <h2>I have added betting!<br></h2>
 <p>As I didn't want to brute force my way through this task, implementation took about 4 hours 
@@ -18,16 +18,16 @@ making the final product look prettier)<br></p>
 <img src="double_down.png" width="500" height="500">
 <iframe id="vid" width="840" height="473" src="https://www.youtube.com/embed/hsZI4UY4Gig?controls=0" frameborder="0" allowfullscreen> </iframe>
 <br><br>
-<p style="font-family:papyrus">Addendum:<br>Soft 17 means dealer stands on A[6] - where 6 is the final value of the dealer's other 4 cards.<br>
+<p>Addendum:<br>Soft 17 means dealer stands on A[6] - where 6 is the final value of the dealer's other 4 cards.<br>
 This means the dealer doesn't get the chance to increase their hand to 21, reducing house edge by ~0.2%.<br>I have not played my game enough to notice what
 I actually implemented, and tbh, I've forgotten my intended implemenation<br>(probably Hard 17 but idk lol)</p></style>
-<p style="font-family:papyrus">Addendum 2:<br>It's stand on Soft 17...<br>~0.2%, nice</p><br>
+<p>Addendum 2:<br>It's stand on Soft 17...<br>~0.2%, nice</p><br>
 <img src="S17.png" width="200" height="200"><br>
-<p style="font-family:papyrus" style="color:pink">Links to Resources:</p>
-<a href="https://www.felixcloutier.com/x86/index.html" style="font-family:papyrus">Reference Manual</a>
-<a href="https://www.eso.org/~ndelmott/ascii.html" style="font-family:papyrus">Ascii Chart</a>
+<p >Links to Resources:</p>
+<a href="https://www.felixcloutier.com/x86/index.html">Reference Manual</a>
+<a href="https://www.eso.org/~ndelmott/ascii.html">Ascii Chart</a>
 </center>
 <br><br><br>
-<a href="./index" style="font-family:papyrus">Home</a>
+<a href="./index">Home</a>
 </body>
 </html> 
