--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <html>
-<head>
+<head><link rel="stylesheet" href="font.css">
   <title>The Swagman Cometh</title>
 </head>
 <body background="bg.htm">
