--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 <p align="center" font size="18"><font color="yellow">This is a personal webpage written in HTML and some light JavaScript, 
 aiming to replicate those of the early 2000s. My name is Aaron - I am currently an IT Technician with ambitions of moving into the CyberSecurity Field. 
 please click the link(s) below to view my projects</p>
-<p"> Me: </p>
 <h2 align="center">Projects</h2>
 <center>
-<a href="https://github.com/aaronsoulim/x86encryption" style="font-family:papyrus">x86 Encryption (message for access request)</a>
+<a href="https://github.com/aaronsoulim/x86encryption">x86 Encryption (message for access request)</a>
 <br>
-<a href="https://github.com/aaronsoulim/VulnerabilityExploits" style="font-family:papyrus">Vulnerability Exploits</a>
+<a href="https://github.com/aaronsoulim/VulnerabilityExploits">Vulnerability Exploits</a>
 <br>
 <a href="./blackjack">x86 Blackjack</a><br>
 <a href="./machlearn">x86 Machine Learning</a><br>
