--- a/machlearn.html
+++ b/machlearn.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html> 
 <html>
-<body bgcolor="black" style="font-family:papyrus" font color="white">
-<body link="white" alink="green" vlink="white"> 
-<h1 id="tit" style="font-family:papyrus" align="center"><font color="white">x86 Machine Learning</h1>
+  <head><link rel="stylesheet" href="font.css"></head>
+<body bgcolor="black" font color="white" link="white" alink="green" vlink="white"> 
+<h1 id="tit" align="center"><font color="white">x86 Machine Learning</h1>
 <br><center><p>Learning through trust, classification and iteration...</p><br>
 <iframe id="vid" width="840" height="473" src="https://www.youtube.com/embed/GgDksYP3E70?controls=0" frameborder="0" allowfullscreen> </iframe>
 <br><p>Addendum:<br>I believe, even and odd sorting will always be a form classification, and therefore: Will always <b>effectively</b> require supervised learning
   <br>In order to showcase Unsupervised learning, a more complex subject would be required</p>
-<p style="font-family:papyrus">Links to Resources:</p>
-<a href="https://www.youtube.com/watch?v=R9OHn5ZF4Uo" style="font-family:papyrus">CGP Grey Video</a>
+<p>Links to Resources:</p>
+<a href="https://www.youtube.com/watch?v=R9OHn5ZF4Uo">CGP Grey Video</a>
 </center>
 </center>
 <br><br><br>
-<a href="./index" style="font-family:papyrus">Home</a>
+<a href="./index">Home</a>
 </body>
 </html> 
