--- a/blackjack.html
+++ b/blackjack.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html> 
 <html>
+  <head><link rel="stylesheet" href="font.css"></head>
 <body background="casino2.htm" font color="pink">
 <body link="white" alink="green" vlink="white"> 
 <h1 id="tit" style="font-family:gothic" align="center"><font color="pink">x86 BlackJack</h1>
