--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ please click the link(s) below to view my projects</p>
 <br>
 <a href="./blackjack">x86 Blackjack</a><br>
 <a href="./machlearn">x86 Machine Learning</a><br>
-<a>PING FLOODER</a>
+<a>PING FLOODER (C PROGRAM USING RAW SCOKETS)</a></br>
 <a href="./forum">FORUM</a><br>
 <h3 align="center">Contact</h3>
 <a href="https://www.linkedin.com/in/asl-li/">LinkedIn</a>
@@ -65,21 +65,6 @@ masage="Mother's Day Challenge";
 masage = "why would you press cancel -_-";}
 document.getElementById("fmlnk").innerHTML = masage;
 }
-</script>
-<center>
-<video id="ding" width="200" height="200" src="bB.mov"></video></center>
-<br>
-<center>
-<button onclick="vplay2()" type="button">Merk</button>
-<button onclick="vpause2()" type="button">Pause said Merking</button>
-</center>
-<script>
-var vid2 = document.getElementById("ding");
-vid2.volume=0.3
-function vplay2() {
-vid2.play();}
-function vpause2() {
-vid2.pause();}
 </script>
 <p> Download:</p>
 <a><i>this (down, temporarily)</i></a>
