--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ please click the link(s) below to view my projects</p>
 <br>
 <a href="./blackjack">x86 Blackjack</a><br>
 <a href="./machlearn">x86 Machine Learning</a><br>
-<a>PING FLOODER (C PROGRAM USING RAW SCOKETS)</a></br>
+<a href="javascript:void(0)">PING FLOODER (C PROGRAM USING RAW SCOKETS)</a></br>
 <a href="./forum">FORUM</a><br>
 <h3 align="center">Contact</h3>
 <a href="https://www.linkedin.com/in/asl-li/">LinkedIn</a>
