--- a/forum.html
+++ b/forum.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <head><link rel="stylesheet" href="font.css"></head>
 <h1 style="font-family: gothic">FORUM<h1>
 <body>
 <style.wrap
