--- a/forum.html
+++ b/forum.html
@@ -2,7 +2,7 @@
 <html>
   <head><link rel="stylesheet" href="font.css"></head>
 <h1 style="font-family: gothic">FORUM<h1>
-<body>
+<body bgcolor="black">
 <style.wrap
 {
 word-wrap: break-word;
@@ -21,6 +21,7 @@ I began sorting out accounts and authorisation, where in the final form each use
 <br>In between coding sessions, I also became more familiar with VIM, mariadb and ARCH linux, a naive example: bash scripts and server-side php scripts to remove stale sessions (&gt; 5 hours) from /tmp (therefore closing the session) and from the USERS table. Otherwise, I have just been gaining a general comfortability with the components<br>
 I got to develop my HTML skills, with FORMs & href="forum.php?[variable]=" - and JavaScript, with href="#" & "javascript:void(0)"<br> I also discovered font copyright laws and learnt some CSS for @font-face...<br>I decided to finish this project early as to redirect my ambition toward a TEXT-BASED MMORPG, otherwise, I would have 
 liked to extend the search feature to the Manage Posts and Liked pages; As well as implementing a Background PHP script using AJAX<br></div>
+<br><br><a href="index">HOME</a>
 </div>
 </body>
 </html>
