--- a/forum.html
+++ b/forum.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head><link rel="stylesheet" href="font.css"></head>
-<h1 style="font-family: gothic">FORUM<h1>
-<body bgcolor="black">
+<h1 style="font-family: gothic; color: white">FORUM<h1>
+<body bgcolor="black" style="color:white; font-size: 12px" link="white" alink="green" vlink="blue">
 <style.wrap
 {
 word-wrap: break-word;
