--- a/forum.html
+++ b/forum.html
@@ -2,13 +2,13 @@
 <html>
   <head><link rel="stylesheet" href="font.css"></head>
 <h1 style="font-family: gothic; color: white">FORUM<h1>
-<body bgcolor="black" style="color:white; font-size: 12px" link="white" alink="green" vlink="blue">
+<body bgcolor="black" style="color:white; font-size: 10px" link="white" alink="green" vlink="blue">
 <style.wrap
 {
 word-wrap: break-word;
 }
 <div align=center>
-This latest project started as PHP and SQL learning experience, and over the 7 days (in free time between work and puppy-caring, it quickly devolving into delusions of innovation and soon realising
+This latest project started as PHP and SQL learning experience, and over the 7 days (in my free time between work and puppy-caring), it quickly devolving into delusions of innovation and soon realising
 I was simply creating platforms that already exist.
 <br><br>
 Anyway, I DID learn a lot with regards to PHP and SQL syntax and logic - including:
@@ -22,6 +22,16 @@ I began sorting out accounts and authorisation, where in the final form each use
 I got to develop my HTML skills, with FORMs & href="forum.php?[variable]=" - and JavaScript, with href="#" & "javascript:void(0)"<br> I also discovered font copyright laws and learnt some CSS for @font-face...<br>I decided to finish this project early as to redirect my ambition toward a TEXT-BASED MMORPG, otherwise, I would have 
 liked to extend the search feature to the Manage Posts and Liked pages; As well as implementing a Background PHP script using AJAX<br></div>
 <br><br><a href="index">HOME</a>
+<div>
+<img src="users.png" width="50%" height="50%">  
+  <img src="home.png" width="50%" height="50%">  
+  <img src="create.png" width="50%" height="50%">  
+  <img src="splash.png" width="50%" height="50%">  
+<img src="tw.png" width="50%" height="50%">  
+  <img src="post.png" width="50%" height="50%">  
+  <img src="mng_like.png" width="50%" height="50%">  
+  <img src="chng.png" width="50%" height="50%">  
+</div>
 </div>
 </body>
 </html>
