--- a/forum.html
+++ b/forum.html
@@ -23,14 +23,14 @@ I got to develop my HTML skills, with FORMs & href="forum.php?[variable]=" - and
 liked to extend the search feature to the Manage Posts and Liked pages; As well as implementing a Background PHP script using AJAX<br></div>
 <br><br><a href="index">HOME</a>
 <div>
-<img src="users.png" width="50%" height="50%">  
-  <img src="home.png" width="50%" height="50%">  
-  <img src="create.png" width="50%" height="50%">  
-  <img src="splash.png" width="50%" height="50%">  
-<img src="tw.png" width="50%" height="50%">  
-  <img src="post.png" width="50%" height="50%">  
-  <img src="mng_like.png" width="50%" height="50%">  
-  <img src="chng.png" width="50%" height="50%">  
+<img src="users.PNG" width="50%" height="50%">  
+  <img src="home.PNG" width="50%" height="50%">  
+  <img src="create.PNG" width="50%" height="50%">  
+  <img src="splash.PNG" width="50%" height="50%">  
+<img src="tw.PNG" width="50%" height="50%">  
+  <img src="post.PNG" width="50%" height="50%">  
+  <img src="mng_like.PNG" width="50%" height="50%">  
+  <img src="chng.PNG" width="50%" height="50%">  
 </div>
 </div>
 </body>
