--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body link="white" alink="green" vlink="white"> 
 <h1 style="font-family:'gothic'" align="center"><font color="yellow">Welcome to mylore.net</h1>
 <p align="center" font size="18"><font color="yellow">This is a personal webpage written in HTML and some light JavaScript, 
-aiming to replicate those of the early 2000s. My name is Aaron - I am currently an IT Technician with ambitions of moving into the CyberSecurity Field. 
+aiming to replicate those of the early 2000s. My name is Aaron - I am currently an IT Technician with ambitions of moving into the CyberSecurity Field.<br>I have achieved a Bacholer of Science with Honours in Physics and a
+  Postgraduate Diploma in Cyber Security.<br>
 please click the link(s) below to view my projects</p>
 <h2 align="center">Projects</h2>
 <center>
