--- a/index.html
+++ b/index.html
@@ -12,24 +12,22 @@ aiming to replicate those of the early 2000s. My name is Aaron - I am currently 
   Postgraduate Diploma in Cyber Security.<br>
 please click the link(s) below to view my projects</p>
 <h2 align="center">Projects</h2>
-<center>
-<a href="https://github.com/aaronsoulim/x86encryption">x86 Encryption (message for access request)</a>
+<div align="center">
+<a href="javascript:void(0)">x86 Encryption (message for access)</a>
 <br>
 <a href="https://github.com/aaronsoulim/VulnerabilityExploits">Vulnerability Exploits</a>
 <br>
 <a href="./blackjack">x86 Blackjack</a><br>
 <a href="./machlearn">x86 Machine Learning</a><br>
-<a href="javascript:void(0)">PING FLOODER (C PROGRAM USING RAW SCOKETS)</a></br>
+<a href="javascript:void(0)">PING FLOODER (C PROGRAM USING RAW SCOKETS - message for access)</a></br>
 <a href="./forum">FORUM</a><br>
 <h3 align="center">Contact</h3>
 <a href="https://www.linkedin.com/in/asl-li/">LinkedIn</a>
 <br>
 <p> Some music I made, for <i>ambience</i> : </p></center>
 <audio id="bgmus" src="bg_music_by_me.m4a"></audio>
-<center>
 <button onclick="play()" type="button">Play Audio</button>
 <button onclick="pause()" type="button">Pause Audio</button>
-</center>
 <script>
 var wpm = document.getElementById("bgmus");
 function play() {
@@ -38,14 +36,12 @@ function pause() {
 wpm.pause();}
 </script>
 <br>
-<center><p> Video of me shredding: </p>
-</center><center>
+<p> Video of me shredding: </p>
+
 <video id="shred" width="200" height="200" src="shred.mp4"></video></center>
 <br>
-<center>
 <button onclick="vplay()" type="button">Rock!</button>
 <button onclick="vpause()" type="button">Pause!</button>
-</center>
 <script>
 var vid = document.getElementById("shred");
 vid.volume=0.3
@@ -54,7 +50,6 @@ vid.play();}
 function vpause() {
 vid.pause();}
 </script>
-<center>
 <p onclick="onClick()" id="fm">.</p>
 <a" href="./hmd" id="fmlnk"></a>
 <script>
@@ -73,6 +68,6 @@ document.getElementById("fmlnk").innerHTML = masage;
 responsible for outcomes that may occur, other than those that are specifically directed to by the source code ~ i.e. 
 The programme intends no harm, just a little joke...</p>
 <a href="https://github.com/aaronsoulim/funnylilthings/blob/main/lets.c"><i>SRC (down, temporarily)</i></a>
-</center>
+</div>
 </body>
 </html> 
