--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ wpm.pause();}
 <br>
 <p> Video of me shredding: </p>
 
-<video id="shred" width="200" height="200" src="shred.mp4"></video></center>
+<video id="shred" width="200" height="200" src="shred.mp4"></video>
 <br>
 <button onclick="vplay()" type="button">Rock!</button>
 <button onclick="vpause()" type="button">Pause!</button>
@@ -61,6 +61,21 @@ masage="Mother's Day Challenge";
 masage = "why would you press cancel -_-";}
 document.getElementById("fmlnk").innerHTML = masage;
 }
+</script>
+  
+<p> Video of me blues-ing: </p>
+
+<video id="blues" width="200" height="200" src="rhintro-redo-360p30.mov"></video>
+<br>
+<button onclick="vplay2()" type="button">Rock!</button>
+<button onclick="vpause2()" type="button">Pause!</button>
+<script>
+var vid = document.getElementById("blues");
+vid.volume=1
+function vplay2() {
+vid.play();}
+function vpause2() {
+vid.pause();}
 </script>
 <p> Download:</p>
 <a><i>this (down, temporarily)</i></a>
