--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 aiming to replicate those of the early 2000s. My name is Aaron - I am currently an IT Technician with ambitions of moving into the CyberSecurity Field.<br>I have achieved a Bacholer of Science with Honours in Physics and a
   Postgraduate Diploma in Cyber Security.<br>
 please click the link(s) below to view my projects</p>
+  <div align="center">
+    <img src="./bball.GIF">
+    <img src="./flame.GIF">
+  </div>
 <h2 align="center">Projects</h2>
 <div align="center">
 <a href="javascript:void(0)">x86 Encryption (message for access)</a>
@@ -67,7 +71,7 @@ document.getElementById("fmlnk").innerHTML = masage;
 
 <video id="blues" width="200" height="200" src="rhintro-redo-360p30.mov"></video>
 <br>
-<button onclick="vplay2()" type="button">Rock!</button>
+<button onclick="vplay2()" type="button">Blues!</button>
 <button onclick="vpause2()" type="button">Pause!</button>
 <script>
 var vid = document.getElementById("blues");
