--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ aiming to replicate those of the early 2000s. My name is Aaron - I am currently 
   Postgraduate Diploma in Cyber Security.<br>
 please click the link(s) below to view my projects</p>
   <div align="center">
-    <img src="./bball.GIF">
-    <img src="./flame.GIF">
+    <img style="width: 200px; height: 200px" src="./bball.GIF">
+    <img style="width: 200px; height: 200px" src="./flame.GIF">
   </div>
 <h2 align="center">Projects</h2>
 <div align="center">
