--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ wpm.pause();}
 <p> Video of me shredding: </p>
 
 <video id="shred" width="200" height="200" src="shred.mp4"></video>
-<br>
-<a onclick="vplay()">Rock!</a>
-<a onclick="vpause()">Pause!</a>
+<br><br>
+<a href="#" onclick="vplay()">Rock!</a>
+<a href="#" onclick="vpause()">Pause!</a>
 <script>
 var vid = document.getElementById("shred");
 vid.volume=0.3
@@ -70,9 +70,9 @@ document.getElementById("fmlnk").innerHTML = masage;
 <p> Video of me blues-ing: </p>
 
 <video id="blues" width="200" height="200" src="rhintro-redo-360p30.mov"></video>
-<br>
-<a onclick="vplay2()">Blues!</a>
-<a onclick="vpause2()">Pause!</a>
+<br><br>
+<a href="#" onclick="vplay2()">Blues!</a>
+<a href="#" onclick="vpause2()">Pause!</a>
 <script>
 var vid2 = document.getElementById("blues");
 vid.volume=1
