--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ wpm.pause();}
 
 <video id="shred" width="200" height="200" src="shred.mp4"></video>
 <br><br>
-<a href="#" onclick="vplay()">Rock!</a>
-<a href="#" onclick="vpause()">Pause!</a>
+<a href="javascript:void(0);" onclick="vplay()">Rock!</a>
+<a href="javascript:void(0);" onclick="vpause()">Pause!</a>
 <script>
 var vid = document.getElementById("shred");
 vid.volume=0.3
@@ -71,8 +71,8 @@ document.getElementById("fmlnk").innerHTML = masage;
 
 <video id="blues" width="200" height="200" src="rhintro-redo-360p30.mov"></video>
 <br><br>
-<a href="#" onclick="vplay2()">Blues!</a>
-<a href="#" onclick="vpause2()">Pause!</a>
+<a href="javascript:void(0);" onclick="vplay2()">Blues!</a>
+<a href="javascript:void(0);" onclick="vpause2()">Pause!</a>
 <script>
 var vid2 = document.getElementById("blues");
 vid.volume=1
